we have unsolved issues with resizing our icon and making it hidden on smaller screens. It doesn't seem to respond regardless of everything we tried.

--- a/starter-code/styles/modules.css
+++ b/starter-code/styles/modules.css
@@ -53,3 +53,9 @@ i {
          - Main should be all on one row, with padding spaced better for a larger screen.
          - Just, ya know, try to make it look good! */
 /* @media only screen... */
+
+@media screen and (min-width:1100px) {
+  @font-face {
+    display: none;
+  }
+}
